--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
 	"private": true,
 	"scripts": {
 		"start": "ts-node-dev --respawn --transpile-only src/index.ts",
-		"test": "ts-node-dev --respawn --transpile-only src/index.spec.ts"
+		"test": "ts-node-dev --respawn --transpile-only src/tests/index.spec.ts",
+		"jest": "jest"
 	},
 	"dependencies": {
 		"typescript": "^4.1.5"
 	},
 	"devDependencies": {
+		"@types/jest": "^26.0.20",
+		"@types/node": "^14.14.28",
+		"jest": "^26.6.3",
+		"ts-jest": "^26.5.1",
 		"ts-node-dev": "^1.1.1"
 	}
 }
